@@ -1,8 +1,10 @@
 dir = File.dirname(__FILE__)
 lib_path = File.expand_path(File.join(dir, '..', 'lib'))
 $LOAD_PATH.unshift lib_path unless $LOAD_PATH.include?(lib_path)
-require 'spec'
 
-require 'threading'
-require 'threading_debug'
-require 'message_parser'
+require 'rubygems'
+require 'spec'
+require 'logging'
+require 'lib/threading'
+require 'lib/threading_debug'
+require 'lib/message_parser'
